gcc_notes/10.gcc_Wno_error.txt
一。-Werror
经常我们在工程中，会使用别人的既有代码。假设我们使用了一个人的代码A目录，里面有一个-Werror的选项，把所有的警告当做错误；又使用了另一个人的代码B目录，里面存在一堆Warning。这样，当我们把它们合在一起编译的时候，A中的-Werror选项会导致B的代码编译不过。但我们又不想去修改B的代码，怎么办？
参见 https://blog.csdn.net/liwen01/article/details/71171413
方法是，先add_subdirectory(A)，之后，加上一句
set(CMAK_CXX_FLAGS "${CMAK_CXX_FLAGS} -Wno-error")
-Wno-这个前缀，就是用来取消一个编译选项的
然后，再add_subdirectory(B)

二、解决办法：defined but not used [-Werror=unused-variable]
2019-03-24 12:45:07 柳鲲鹏 阅读数 2753更多
分类专栏： Linux/Shell  C/C++
版权声明：本文为博主原创文章，遵循 CC 4.0 BY-SA 版权协议，转载请附上原文出处链接和本声明。
本文链接：https://blog.csdn.net/quantum7/article/details/88775605
 遇到错误如下：

 /grpc/gens/src/proto/grpc/core/stats.pb.cc:187:13: error: ‘dynamic_init_dummy_src_2fproto_2fgrpc_2fcore_2fstats_2eproto’ defined but not used [-Werror=unused-variable]
  static bool dynamic_init_dummy_src_2fproto_2fgrpc_2fcore_2fstats_2eproto = []()
               ^
			   cc1plus: all warnings being treated as errors
			   找到Makefile，去掉其中-Werror ，重新编译。
